[package]
name = "raspberrypi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-hal = "0.9.0"
rp2040-boot2 = "0.3.0"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.3"
cortex-m = "0.7.7"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"